@@ -1,3 +1,8 @@
+2009-02-08  Joseph Myers  <joseph@codesourcery.com>
+
+	PR c/36432
+	* gcc.dg/c90-flex-array-2.c, gcc.dg/c99-flex-array-6.c: New tests.
+
 2009-02-05  Joseph Myers  <joseph@codesourcery.com>
 
 	PR c/35435
