@@ -1,3 +1,10 @@
+2009-02-08  Joseph Myers  <joseph@codesourcery.com>
+
+	PR c/36432
+	* c-decl.c (grokdeclarator): Don't treat [] declarators in fields
+	as indicating flexible array members unless the field itself is
+	being declarared as the incomplete array.
+
 2009-02-07  Kaz Kojima  <kkojima@gcc.gnu.org>
 
 	Backport from mainline:
